game creation parameters
- api now receives difficulty as a parameter
- now can receive custom difficulty and then you can send the height, width and quantity of mines
- swagger and readme updated
