# minesweeper-backend/api/routes/board.js
@@ -4,7 +4,7 @@ const {
   newBoard,
   revealCell,
   flagCell,
-  getAllBoards
+  getAllBoards,
 } = require('../controller/boardController');
 
 const router = express.Router();
@@ -12,7 +12,6 @@ const router = express.Router();
 router.get('/:user/board', getAllBoards);
 router.get('/:user/board/:id', getById);
 router.post('/:user/board/', newBoard);
-router.post('/:user/board/:difficulty', newBoard);
 router.post('/:user/board/:id/reveal/:x/:y', revealCell);
 router.post('/:user/board/:id/flag/:x/:y', flagCell);
 module.exports = router;
